Raw type
Signed-off-by: Seppe Volkaerts <seppevolkaerts@hotmail.com>